// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OnlineFriends calls getFriends on mount 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row grid-item-style css-1fzlhpv-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 friends-container paper-block css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="block-title"
      >
        Online friends
         
        <span
          class="counter"
        >
          1
        </span>
      </div>
      <ul
        class="MuiList-root MuiList-padding friends-container__top-friends__list css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding friends-container__top-friends__item css-cfd5wn-MuiListItem-root"
        >
          <div
            class="MuiListItemAvatar-root friends-container__top-friends__item__avatar-block css-1ulznza-MuiListItemAvatar-root"
          >
            <span
              class="MuiBadge-root avatar-badge avatar-badge__active css-63ezxx-MuiBadge-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular avatar user-avatar big-avatar css-fmeqll-MuiAvatar-root"
                id="user-avatar"
              >
                <img
                  alt="John Smith"
                  class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                  src="avatar1.jpg"
                />
              </div>
              <span
                class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-aa1yeu-MuiBadge-badge"
              />
            </span>
          </div>
          John
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OnlineFriends renders online friend 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row grid-item-style css-1fzlhpv-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 friends-container paper-block css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="block-title"
      >
        Online friends
         
        <span
          class="counter"
        >
          1
        </span>
      </div>
      <ul
        class="MuiList-root MuiList-padding friends-container__top-friends__list css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding friends-container__top-friends__item css-cfd5wn-MuiListItem-root"
        >
          <div
            class="MuiListItemAvatar-root friends-container__top-friends__item__avatar-block css-1ulznza-MuiListItemAvatar-root"
          >
            <span
              class="MuiBadge-root avatar-badge avatar-badge__active css-63ezxx-MuiBadge-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular avatar user-avatar big-avatar css-fmeqll-MuiAvatar-root"
                id="user-avatar"
              >
                <img
                  alt="John Smith"
                  class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                  src="avatar1.jpg"
                />
              </div>
              <span
                class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-aa1yeu-MuiBadge-badge"
              />
            </span>
          </div>
          John
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OnlineFriends renders online friends count 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row grid-item-style css-1fzlhpv-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 friends-container paper-block css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="block-title"
      >
        Online friends
         
        <span
          class="counter"
        >
          1
        </span>
      </div>
      <ul
        class="MuiList-root MuiList-padding friends-container__top-friends__list css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding friends-container__top-friends__item css-cfd5wn-MuiListItem-root"
        >
          <div
            class="MuiListItemAvatar-root friends-container__top-friends__item__avatar-block css-1ulznza-MuiListItemAvatar-root"
          >
            <span
              class="MuiBadge-root avatar-badge avatar-badge__active css-63ezxx-MuiBadge-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular avatar user-avatar big-avatar css-fmeqll-MuiAvatar-root"
                id="user-avatar"
              >
                <img
                  alt="John Smith"
                  class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                  src="avatar1.jpg"
                />
              </div>
              <span
                class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-aa1yeu-MuiBadge-badge"
              />
            </span>
          </div>
          John
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OnlineFriends renders online friends title 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row grid-item-style css-1fzlhpv-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 friends-container paper-block css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="block-title"
      >
        Online friends
         
        <span
          class="counter"
        >
          1
        </span>
      </div>
      <ul
        class="MuiList-root MuiList-padding friends-container__top-friends__list css-b7dj7n-MuiList-root"
      >
        <li
          class="MuiListItem-root MuiListItem-gutters MuiListItem-padding friends-container__top-friends__item css-cfd5wn-MuiListItem-root"
        >
          <div
            class="MuiListItemAvatar-root friends-container__top-friends__item__avatar-block css-1ulznza-MuiListItemAvatar-root"
          >
            <span
              class="MuiBadge-root avatar-badge avatar-badge__active css-63ezxx-MuiBadge-root"
            >
              <div
                class="MuiAvatar-root MuiAvatar-circular avatar user-avatar big-avatar css-fmeqll-MuiAvatar-root"
                id="user-avatar"
              >
                <img
                  alt="John Smith"
                  class="MuiAvatar-img css-1su80sj-MuiAvatar-img"
                  src="avatar1.jpg"
                />
              </div>
              <span
                class="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-aa1yeu-MuiBadge-badge"
              />
            </span>
          </div>
          John
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`OnlineFriends renders with no online friends 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row grid-item-style css-1fzlhpv-MuiGrid2-root"
  >
    <div
      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 friends-container paper-block css-1gtchvp-MuiPaper-root"
      style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
    >
      <div
        class="block-title"
      >
        Online friends
         
        <span
          class="counter"
        >
          0
        </span>
      </div>
      <div
        class="opacity-text no-items"
        data-testid="no-data"
      >
        На данный момент список онлайн друзей пуст.
      </div>
    </div>
  </div>
</div>
`;
